# crud-api

./: Cargo.toml  README.md  todo.db
apps/taskone/: Cargo.toml  schema.sql
apps/taskone/src/: api_error.rs  db.rs  handlers.rs  main.rs  task.rs
